force-app/main/default/objects/Standard_Process_Overview__kav/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>