force-app/main/default/objects/Standard_Process_Overview__kav/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <label>Procedure</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>