force-app/main/default/objects/Standard_Process_Overview__kav/fields/Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Date__c</fullName>
    <label>Revision Date</label>
    <type>Date</type>
</CustomField>